Add the script need for my page to filter to the sections the user wants to view.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -47,6 +47,13 @@ i {
     font-size: xx-large;
 }
 
+#profile-pic {
+    object-fit: cover;
+    object-position: -110px;
+    border-radius: 5px;
+
+}
+
 .hide {
     display: none !important;
 }
