I have been working on trying to make the transitions between the sections more smooth and appealing to a user so there is code in all aspects that make this happen. Need to update the rest of the code and then tweak to make it perfect.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -46,6 +46,10 @@ i {
     font-size: xx-large;
 }
 
+section {
+    transition: all 1s ease-in-out;
+}
+
 #img-container {
     overflow: hidden;
     display: fit-content;
@@ -60,3 +64,8 @@ i {
     display: none !important;
 }
 
+.trans {
+    visibility: hidden;
+    opacity: 0;
+    max-height: 0% !important;
+}
