--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -19,6 +19,8 @@ body {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 header {
@@ -77,7 +79,19 @@ section {
     max-height: 0% !important;
 }
 
+footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: var(--transparent-black);
+}
+
 @media screen and (max-width: 768px) {
+    nav {
+        justify-content: space-evenly;
+    }
+
     #homeBtn,
     #aboutMeBtn,
     #projectsBtn,
@@ -89,9 +103,11 @@ section {
     #aboutMeIcon,
     #projectsIcon,
     #resumeIcon  {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: flex-start;
-        padding-bottom: .75rem;
+        display: inherit;
+        padding: 0 0 0.9rem 0;
+    }
+
+    #img-container {
+        margin: 10px;
     }
 }
