Added my resume to the file and then I also made some edits to the resume buttons so they allow for downloading the resume.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -55,6 +55,12 @@ i {
     font-size: xx-large;
 }
 
+#resumeBtn a, 
+#resumeIcon a {
+    text-decoration: none;
+    color: white;
+}
+
 section {
     transition: all 1s ease-in-out;
 }
