Updated my portfolio.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,15 +54,15 @@
             </div>
           </a>
           <a class="carousel-item" href="https://github.com/TaaniBravo/13-Eat-Da-Burger" target="_blank">
-            <img src="./assets/images/2020.11.20-17.33.png" class="d-block w-100" alt="Weather Dashboard">
+            <img src="./assets/images/eat-da-burger.png" class="d-block w-100" alt="Eat Da Burger">
             <div class="carousel-caption d-none d-md-block text-body">
               <h5>Custom built ORM application with MYSQL database, styled with SCSS.</h5>
             </div>
           </a>
           <a class="carousel-item" href="https://github.com/TaaniBravo/One-World-Academy" target="_blank">
-            <img src="./assets/images/2020.11.20-17.34.png" class="d-block w-100" alt="Password Generator">
+            <img src="./assets/images/oneworldacademy.png" class="d-block w-100" alt="One World Academy LMS">
             <div class="carousel-caption d-none d-md-block text-body">
-              <h5>Custom LMS with user courses and quizzes. Made with Sequelize, Passport, and Bootstrap.</h5>
+              <h5>Custom LMS to organize user made courses. Made with Sequelize, Passport, and Bootstrap.</h5>
             </div>
           </a>
           <a class="carousel-item" href="https://github.com/TaaniBravo/StockSmart" target="_blank">
