--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -47,36 +47,36 @@
       <h3 class="text-white text-center">Click to learn more!</h3>
       <div id="carousel" class="carousel slide m-3" data-ride="carousel">
         <div class="carousel-inner">
-          <a class="carousel-item active" href="https://github.com/TaaniBravo/Trail-Chaser-Hiking-App" target="_blank">
-            <img src="./assets/images/2020.11.20-17.28.png" class="d-block w-100" alt="Trail Chasers App">
+          <a class="carousel-item active tinted-image" href="https://github.com/TaaniBravo/Trail-Chaser-Hiking-App" target="_blank">
+            <img src="./assets/images/trailchasers.png" class="d-block w-100" alt="Trail Chasers App">
             <div class="carousel-caption d-none d-md-block">
               <h5>Custom Hike App using HTML, Bulma CSS, JQuery and Hiking API.</h5>
             </div>
           </a>
-          <a class="carousel-item" href="https://github.com/TaaniBravo/13-Eat-Da-Burger" target="_blank">
+          <a class="carousel-item tinted-image" href="https://github.com/TaaniBravo/13-Eat-Da-Burger" target="_blank">
             <img src="./assets/images/eat-da-burger.png" class="d-block w-100" alt="Eat Da Burger">
-            <div class="carousel-caption d-none d-md-block text-body">
+            <div class="carousel-caption d-none d-md-block">
               <h5>Custom built ORM application with MYSQL database, styled with SCSS.</h5>
             </div>
           </a>
-          <a class="carousel-item" href="https://github.com/TaaniBravo/One-World-Academy" target="_blank">
+          <a class="carousel-item tinted-image" href="https://github.com/TaaniBravo/One-World-Academy" target="_blank">
             <img src="./assets/images/oneworldacademy.png" class="d-block w-100" alt="One World Academy LMS">
-            <div class="carousel-caption d-none d-md-block text-body">
+            <div class="carousel-caption d-none d-md-block">
               <h5>Custom LMS to organize user made courses. Made with Sequelize, Passport, and Bootstrap.</h5>
             </div>
           </a>
-          <a class="carousel-item" href="https://github.com/TaaniBravo/StockSmart" target="_blank">
+          {{!-- <a class="carousel-item tinted-image" href="https://github.com/TaaniBravo/StockSmart" target="_blank">
             <img src="./assets/images/2020.11.20-17.34_01.png" class="d-block w-100" alt="Legend of Zelda Quiz">
-            <div class="carousel-caption d-none d-md-block text-body">
+            <div class="carousel-caption d-none d-md-block">
               <h5>Stock Scanner built with Sequelize, Passport, Bootstrap CSS, and Handlebars. Using Yahoo API.</h5>
             </div>
-          </a>
-          <a class="carousel-item" href="https://github.com/TaaniBravo/05-Workday-Scheduler" target="_blank">
+          </a> --}}
+          {{!-- <a class="carousel-item tinted-image" href="https://github.com/TaaniBravo/05-Workday-Scheduler" target="_blank">
             <img src="./assets/images/2020.11.20-17.34_02.png" class="d-block w-100" alt="Workday Scheduler">
-            <div class="carousel-caption d-none d-md-block text-body">
+            <div class="carousel-caption d-none d-md-block">
               <h5>Plan your workday with this scheduler that saves your inputs!</h5>
             </div>
-          </a>
+          </a> --}}
         </div>
         <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
