--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,13 +21,13 @@
       Taani Maama
     </h1>
     <p id='full-stack' class="col-12">FULL-STACK DEVELOPER.</p>
-    <p class="lead col-12">{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span
+    <p class="lead col-12" >{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span
         id="create">Create</span> }</p>
   </header>
 
   {{{body}}}
 
-  <footer class="p-1 text-white row fixed-bottom p-0 m-0">
+  <footer class="py-1 px-3 text-white row fixed-bottom m-0">
     <div id='icons' class="p-1">
       <a href="https://github.com/TaaniBravo" target="_blank"><i class="fab fa-github pr-3 text-white"></i></a>
       <a href="https://www.facebook.com/taanimaama" target="_blank"><i class="fab fa-facebook pr-3 text-white"></i></a>
