Finished Skillset integration.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -46,8 +46,8 @@
     </div>
   </section>
 
-  <section id="projects" class="hide trans col-lg-7 px-0">
-    <h3 class="text-white text-center">Click to learn more!</h3>
+  <section id="projects" class="hide trans col-lg-8 px-0">
+    <h3 class="text-white text-center">Click to learn more or check all of my projects out at my <a href="https://github.com/TaaniBravo/">Github</a> </h3>
     <div id="carousel" class="carousel slide m-3" data-ride="carousel">
       <div class="carousel-inner">
         <a class="carousel-item active tinted-image" href="https://github.com/TaaniBravo/Trail-Chaser-Hiking-App"
@@ -82,7 +82,7 @@
   </section>
 
   <section id="skillset" class="hide trans col-lg-10 d-flex flex-row flex-wrap px-0">
-    <div id="skillset-container" class="row">
+    <div id="skillset-container" class="col-12">
       <div class="card text-center text-light col-sm-4">
         <div class="card-body">
           <h5 class="card-title"><i class="fa-3x fab fa-html5"></i></h5>
