--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -83,6 +83,10 @@ footer i {
     display: fit-content;
 }
 
+#about-me-container {
+    margin-bottom: 40px;
+}
+
 #profile-pic {
     object-fit: cover;
     object-position: -110px;
@@ -132,8 +136,15 @@ footer i {
     50% { border-color: white; }
 }
 
+@media screen and (min-width: 769px) {
+    #projects {
+        margin-bottom: 50px;
+    }
+}
+
 
 @media screen and (max-width: 768px) {
+
     nav {
         justify-content: space-evenly;
     }
@@ -160,6 +171,18 @@ footer i {
     }
 
     #about-me-container {
+        margin-bottom: 45px;
+    }
+
+    #projects {
+        width: 90vw;
+    }
+
+    #projects h3 {
+        font-size: .9rem;
+    }
+
+    #skillset {
         margin-bottom: 45px;
     }
 }
