Updated my github link in projects to be slightly discolored so the user will know they can click it.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -47,7 +47,7 @@
   </section>
 
   <section id="projects" class="hide trans col-lg-8 px-0">
-    <h3 class="text-white text-center">Click to learn more or check all of my projects out at my <a href="https://github.com/TaaniBravo/">Github</a> </h3>
+    <h3 class="text-white text-center">Click to learn more or check all of my projects out at my <a href="https://github.com/TaaniBravo/" class="text-light">Github</a> </h3>
     <div id="carousel" class="carousel slide m-3" data-ride="carousel">
       <div class="carousel-inner">
         <a class="carousel-item active tinted-image" href="https://github.com/TaaniBravo/Trail-Chaser-Hiking-App"
