Updated URLs for the carousel.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -47,23 +47,24 @@
   </section>
 
   <section id="projects" class="hide trans col-lg-8 px-0">
-    <h3 class="text-white text-center">Click to learn more or check all of my projects out at my <a href="https://github.com/TaaniBravo/" class="text-light">Github</a> </h3>
+    <h3 class="text-white text-center">Click to learn more or check all of my projects out at my <a
+        href="https://github.com/TaaniBravo/" class="text-light">Github</a> </h3>
     <div id="carousel" class="carousel slide m-3" data-ride="carousel">
       <div class="carousel-inner">
-        <a class="carousel-item active tinted-image" href="https://github.com/TaaniBravo/Trail-Chaser-Hiking-App"
+        <a class="carousel-item active tinted-image" href="https://taanibravo.github.io/Trail-Chaser-Hiking-App/"
           target="_blank">
           <img src="./assets/images/trailchasers.png" class="d-block w-100" alt="Trail Chasers App">
           <div class="carousel-caption d-none d-md-block">
             <h5>Custom Hike App using HTML, Bulma CSS, JQuery and Hiking API.</h5>
           </div>
         </a>
-        <a class="carousel-item tinted-image" href="https://github.com/TaaniBravo/13-Eat-Da-Burger" target="_blank">
+        <a class="carousel-item tinted-image" href="https://eat-da-burger-or-else.herokuapp.com/" target="_blank">
           <img src="./assets/images/eat-da-burger.png" class="d-block w-100" alt="Eat Da Burger">
           <div class="carousel-caption d-none d-md-block">
             <h5>Custom built ORM application with MYSQL database, styled with SCSS.</h5>
           </div>
         </a>
-        <a class="carousel-item tinted-image" href="https://github.com/TaaniBravo/One-World-Academy" target="_blank">
+        <a class="carousel-item tinted-image" href="https://oneworldacademy.herokuapp.com/" target="_blank">
           <img src="./assets/images/oneworldacademy.png" class="d-block w-100" alt="One World Academy LMS">
           <div class="carousel-caption d-none d-md-block">
             <h5>Custom LMS to organize user made courses. Made with Sequelize, Passport, and Bootstrap.</h5>
